# typewrit

./: .gitignore  pyproject.toml  typewrit.ini
src/typewrit/: __init__.py
src/typewrit/llm/: completion.py
src/typewrit/utils/: __init__.py  configuration.py
