[project]
name = "typewrit"
version = "0.1.0"
description = "Typing test with a story"
readme = "README.md"
authors = [
    { name = "enwask", email = "enwask@ucf.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "kernels>=0.9.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "triton>=3.4.0 ; sys_platform == 'linux'",
]

[project.scripts]
typewrit = "typewrit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

